# prescription_validator

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  drug_database.py  environment.py  index.html
